wwwroot/css/main.css
/* ... */
@media screen and (prefers-reduced-motion: reduce) {
  .collapsing {
    transition: none;
  }
}
.row--grid {
  margin-right: -10px;
  margin-left: -10px;
}
.row--grid .col-6,
.row--grid .col-12 {
  padding-left: 10px;
  padding-right: 10px;
}
@media (min-width: 768px) {
  .row--grid {
    margin-right: -15px;
    margin-left: -15px;
  }
  .row--grid .col-6,
  .row--grid .col-12 {
    padding-left: 15px;
    padding-right: 15px;
  }
}
.b-description_readmore_button {
  cursor: pointer;
  display: block;
  height: 24px;
  width: 100%;
  position: relative;
}
.b-description_readmore_button:before {
  content: '';
  position: absolute;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  transition: opacity 0.4s ease;
  background: url("../img/ellipsis-h.svg") no-repeat center;
  background-size: auto 22px;
  opacity: 0.7;
}
.b-description_readmore_button:hover:before,
.b-description_readmore_button.b-description_readmore_button_active:before {
  opacity: 1;
}
.body:before {
  content: '';
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 99;
  background-color: rgba(43,43,49,0.75);
  opacity: 0;
  pointer-events: none;
  transition: 0.4s ease;
}
.body--active:before {
  z-index: 99;
  opacity: 1;
  pointer-events: auto;
}
/*==============================
	Header
==============================*/
.header {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background-color: #2b2b31;
  z-index: 101;
}
.header__logo {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 70px;
  padding: 0 15px;
  background-color: #28282d;
  width: 110px;
}
.header__logo img {
  width: 100%;
  max-width: 100px;
  display: block;
}
.header__logo:hover {
  background-color: #2b2b31;
}
.header__nav {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  position: fixed;
  top: 70px;
  right: 0;
  bottom: 0;
  background-color: #2b2b31;
  z-index: 99;
  width: 260px;
  padding: 30px 30px 0;
  transform: translate3d(260px, 0, 0);
  transition: 0.4s ease;
}
.header__nav:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 2px;
  display: block;
  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
}
.header__nav--active {
  transform: translate3d(0, 0, 0);
}
.header__nav-link {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  font-size: 14px;
  font-weight: 400;
  text-transform: uppercase;
  color: rgba(255,255,255,0.75);
}
.header__nav-link svg {
  width: 16px;
  height: auto;
  fill: rgba(255,255,255,0.75);
  margin-left: 2px;
  transition: fill 0.4s ease;
}
.header__nav-link--more svg {
  width: 20px;
  margin-left: 0;
}
.header__nav-link:hover,
.header__nav-link[aria-expanded="true"] {
  color: #ff55a5;
}
.header__nav-link:hover svg,
.header__nav-link[aria-expanded="true"] svg {
  fill: #ff55a5;
}
.header__nav-item {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  margin-bottom: 20px;
  position: relative;
}
.header__nav-item:last-child {
  margin-bottom: 0;
}
.header__dropdown {
  position: relative;
  display: block;
  width: 100%;
}
.header__dropdown-menu {
  position: absolute;
  background-color: #2b2b31;
  padding: 15px 20px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  min-width: 180px;
  z-index: -1;
  pointer-events: none;
  opacity: 0;
  box-shadow: 0 5px 25px 0 rgba(0,0,0,0.3);
  transition: 0.4s ease;
  margin-top: 0;
  top: 100%;
  border-radius: 4px;
  overflow: hidden;
}
.header__dropdown-menu:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 2px;
  display: block;
  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
}
.header__dropdown-menu li {
  padding: 0;
}
.header__dropdown-menu a {
  font-size: 16px;
  color: rgba(255,255,255,0.75);
  line-height: 40px;
  display: block;
  font-weight: 300;
}
.header__dropdown-menu a:hover {
  color: #ff55a5;
}
.header__dropdown-menu.show {
  z-index: 1000;
  pointer-events: auto;
  opacity: 1;
  margin-top: 10px;
}
.header__wrap {
  position: relative;
  background-color: #2b2b31;
  z-index: 2;
}
.header__search {
  display: block;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 60px;
  width: 100%;
  overflow: hidden;
  transition: bottom 0.4s ease;
  background-color: #2b2b31;
  z-index: 1;
  box-shadow: 0 5px 25px 0 rgba(0,0,0,0.3);
  border-top: 1px solid rgba(255,255,255,0.05);
}
.header__search--active {
  bottom: -60px;
}
.header__search-content {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  height: 60px;
  position: relative;
}
.header__search-content input {
  position: relative;
  height: 60px;
  width: 100%;
  background-color: #28282d;
  border: none;
  padding: 0 120px 0 15px;
  font-size: 15px;
  color: #fff;
  font-family: 'Open Sans', sans-serif;
}
.header__search-content button {
  position: absolute;
  height: 40px;
  width: 90px;
  top: 10px;
  right: 15px;
  border-radius: 4px;
  background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
  box-shadow: 0 0 20px 0 rgba(255,88,96,0.5);
  opacity: 0.85;
  font-size: 12px;
  color: #fff;
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 0.6px;
}
.header__search-content button:hover {
  color: #fff;
  opacity: 1;
}
.header__content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 70px;
  position: relative;
}
.header__auth {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  margin-right: 44px;
}
/* ... */

